--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
-%<*internal|class>
+%<*internal|class|msdwg>
 \def\Version{2014/08/07 v2.0}
-%</internal|class>
+%</internal|class|msdwg>
 %<*internal>
 \iffalse
 %</internal>
@@ -640,6 +640,101 @@ presentations, or an accompanying transcript, or both.
 }
 %LITERATE
 %</class>
+%<*msdwg>
+%<<LITERATE
+\NeedsTeXFormat{LaTeX2e}[1999/12/01]
+\ProvidesClass{rdaslides}
+    [\Version\space Logo and details of the RDA Metadata Standards Directory Working Group]
+% Scaling mechanism
+\newlength{\MSDWGLUnitLength}
+
+% Dependencies
+\RequirePackage{ifthen,calc,keyval}
+\RequirePackage{tikz}
+\usetikzlibrary{shapes.geometric,positioning}
+
+% Colour palette for the diagram
+\providecolor{rdabrown}{RGB}{113,50,33}%    brown in RDA logo
+\providecolor{rdagreen}{RGB}{117,169,82}%   green in RDA logo
+\providecolor{rdayellow}{RGB}{243,235,48}%  yellow in RDA logo
+
+% Keys for optional argument
+\newlength{\MSDWGLHeight}
+\newlength{\MSDWGLWidth}
+\define@key{msdwgl}{height}{\setlength{\MSDWGLHeight}{#1}}
+\define@key{msdwgl}{width}{\setlength{\MSDWGLWidth}{#1}}
+\newcommand{\MSDWGLLineColour}{none}
+\define@key{msdwgl}{outline}[true]{\renewcommand{\MSDWGLLineColour}{white}}
+
+% The command itself
+\newcommand{\MSDWGLogo}[1][]{%
+\bgroup
+% Read in the keys
+\setkeys{msdwgl}{width=0pt,height=0pt,#1}%
+\ifthenelse{\lengthtest{\MSDWGLHeight > 0pt}}{%
+	\ifthenelse{\lengthtest{\MSDWGLWidth > 0pt}}{%
+		% Both given
+		\setlength{\@tempdima}{\MSDWGLWidth / \real{62.091}}%
+		\setlength{\@tempdimb}{\MSDWGLHeight / \real{59.690}}%
+		\ifthenelse{\lengthtest{\@tempdima > \@tempdimb}}%
+			{\setlength{\MSDWGLUnitLength}{\@tempdimb}}%
+			{\setlength{\MSDWGLUnitLength}{\@tempdima}}%
+	}{%
+		% Just height
+		\setlength{\MSDWGLUnitLength}{\MSDWGLHeight / \real{59.690}}%
+	}%
+}{%
+	\ifthenelse{\lengthtest{\MSDWGLWidth > 0pt}}{%
+		% Just width
+		\setlength{\MSDWGLUnitLength}{\MSDWGLWidth / \real{62.091}}%
+	}{%
+		% Neither: default
+		\setlength{\MSDWGLUnitLength}{1pt}%
+	}%
+}%
+% Draw diagram, 62.091\MSDWGLUnitLength x 59.690\MSDWGLUnitLength
+\begin{tikzpicture}
+  [ inner sep = 0pt
+  , outer sep = 0pt
+  , baseline = (text.base)
+  , line width = 0.4pt
+  ]
+\matrix
+  [ ampersand replacement = \&
+  , nodes =
+    { cylinder
+    , cylinder uses custom fill
+    , cylinder end fill=yellow
+    , aspect=1.0
+    , rotate=43
+    , anchor=center
+    , draw=\MSDWGLLineColour
+    }
+  , row 1 column 1/.style = {cylinder body fill=rdagreen}
+  , row 1 column 2/.style = {cylinder body fill=rdabrown}
+  , row 2 column 1/.style = {cylinder body fill=rdabrown}
+  , row 2 column 2/.style = {cylinder body fill=rdagreen}
+  , column sep = -3\MSDWGLUnitLength
+  , row sep = -4\MSDWGLUnitLength
+  ]
+  (logo)
+  {
+    \node{\phantom{\rule{4\MSDWGLUnitLength}{20\MSDWGLUnitLength}}}; \&
+    \node{\phantom{\rule{4\MSDWGLUnitLength}{20\MSDWGLUnitLength}}}; \\
+    \node{\phantom{\rule{4\MSDWGLUnitLength}{20\MSDWGLUnitLength}}}; \&
+    \node{\phantom{\rule{4\MSDWGLUnitLength}{20\MSDWGLUnitLength}}}; \\
+  };
+\node (text) at (logo.center) {\phantom{RDA}};
+\end{tikzpicture}%
+\egroup
+}
+
+% Hooks that modify the behaviour of rdaslides.cls
+\def\rdaGroupLogo{\MSDWGLogo[width=\hsize]}
+\def\rdaGroupName{Metadata Standards Directory}
+\def\rdaGroupType{Working Group}
+\def\rdaGroupUrl{https://rd-alliance.org/working-groups/metadata-standards-directory-working-group.html}
+%</msdwg>
 %<*internal>
 \fi
 \def\nameofplainTeX{plain}
@@ -690,6 +785,9 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
 \usedir{tex/latex/rdaslides}
 \generate{
   \file{rdaslides.cls}{\from{\jobname.dtx}{class}}
+}
+\generate{
+  \file{rdamsdwg.sty}{\from{\jobname.dtx}{msdwg}}
 }
 %</install>
 %<install>\endbatchfile
@@ -814,10 +912,6 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
 \makeatother
 
 \usepackage{rdamsdwg}
-\def\rdaGroupLogo{\MSDWGLogo[width=\hsize]}
-\def\rdaGroupName{Metadata Standards Directory}
-\def\rdaGroupType{Working Group}
-\def\rdaGroupUrl{https://rd-alliance.org/working-groups/metadata-standards-directory-working-group.html}
 
 % \def\licenseLogo{\includegraphics[width=\hsize]{cc_by}}
 % \def\licenseStatement{Except where otherwise stated,%
