Add missing end-of-verbatim marker.

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -734,6 +734,7 @@ presentations, or an accompanying transcript, or both.
 \def\rdaGroupName{Metadata Standards Directory}
 \def\rdaGroupType{Working Group}
 \def\rdaGroupUrl{https://rd-alliance.org/working-groups/metadata-standards-directory-working-group.html}
+%LITERATE
 %</msdwg>
 %<*internal>
 \fi
