--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -334,12 +334,8 @@ presentations, or an accompanying transcript, or both.
 \define@key{beamerframe}{background}[rda-bg-normal]{%
   \gdef\bgpicture{#1}\bgpicturetrue
 }
-\define@boolkey{beamerframe}{nobackground}[true]{%
-  \ifKV@beamerframe@nobackground
+\define@key{beamerframe}{nobackground}[true]{%
     \bgpicturefalse
-%<class>  \else
-    \bgpicturetrue
-%<class>  \fi
 }
 \setbeamertemplate{background}{%
   \ifbgpicture
@@ -810,6 +806,7 @@ Copyright (C) 2014 Alex Ball <a.ball@ukoln.ac.uk>
     [\Version\ Class for Research Data Alliance presentations]
 \documentclass[set]{rdaslides}
 
+\usepackage{iftex}
 \ifPDFTeX
   \usepackage[utf8]{inputenc}
   \usepackage[T1]{fontenc}
